# practice-python

./: .gitignore  README.md  practice-python.code-workspace  pyproject.toml
general/: builder_pattern.py  class_sample.py  use_generics.py
general/import_cycles/: __init__.py  subject.py
lib_flet/: flet_sample.py  flet_table.py
lib_pysimplegui/: file_select 2.py  window.py  window_2.py
lib_wxpython/: config_items.py  config_items_test.py  config_manager.py  file_open.py  wx_gridtable_from_json.py  wx_gridtable_from_xlsx.py  wx_hotkey2.py
lib_xdwlib/: blank_binder.xbd  page_A3.xdw  page_A4.xdw  page_blank.xdw  use_xdwlib.py
sample_data/: doubutsu.txt  material_sample.xlsx  prefs.json
src/: inherit_list.py  iter_line.py  iter_test.py  print_package_list.py  use_anytree.py  use_generics.py  use_matplotlib.py  user_dict.py
src/PySimpleGUI/: file_select.py  table.py
src/flet/: sample.py
src/import_cycles/: student.py  teacher.py
src/wxpython/: config_items_test.py  config_manager.py  config_manager_test.py  parts.py  utils.py  utils_test.py  wx_gridtable.py  wx_gridtable_from_json.py  wx_gridtable_from_xlsx.py  wx_sample.py  wx_sample_hotkey.py  wx_spreadsheet_2.py
src/yield/: yield_counter.py
tests/: test_import_cycles.py
