[project]
name = "practice-python"
version = "0.1.0"
description = "practice python project"
authors = [
    { name = "tamaohome", email = "85826245+tamaohome@users.noreply.github.com" }
]
dependencies = [
    "anytree>=2.12.1",
    "numpy>=1.26.4",
    "matplotlib>=3.8.4",
    "plotly>=5.21.0",
    "openpyxl>=3.1.2",
    "wxpython>=4.2.1",
    "ipywidgets>=8.1.2",
    "tkeasygui>=0.2.73",
    "flet>=0.23.2",
    "pandas>=2.2.2",
    "xdwlib>=3.10.8",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.4.2",
    "pytest>=8.3.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[tool.black]
exclude = '''
(
  /(
      _old
    | .venv
    | __pycache__
  )/
  | \.pyc$
)
'''
